# check_ci_tag

./: .travis.yml  CMakeLists.txt  README.rst  appveyor.yml
cmake/module/: check_ci_tag.cmake
cmake/template/: Config.cmake.in
